specs/blueprints/errors/parsing/item_outside_field.eno
# Parsing an item without any previous element

-- input
- item
-- input

## ParseError

-- text
The item in line 1 is not contained within a field.
-- text

-- snippet
   Line | Content
 >    1 | - item
-- snippet

selection: [0,0] => [0,6]